Atualização swagger e migrations
